# counter-cruiser

./: .comet.yaml  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
counter_cruiser/: __init__.py
counter_cruiser/client/: __init__.py  __main__.py  annotation.py  capture.py  deterrent_stats.py  transport.py
counter_cruiser/client/alerts/: __init__.py  context.py  deterrent.py  log.py  manager.py  notifications.py  snapshot.py
counter_cruiser/client/web/: __init__.py  app.py  mjpeg.py  routes_dashboard.py  routes_deterrent_stats.py  routes_live_feed.py  routes_zones.py  state.py  zone_store.py
counter_cruiser/config/: __init__.py  loader.py  models.py
counter_cruiser/server/: __init__.py  __main__.py  handler.py  model.py
counter_cruiser/shared/: __init__.py  debounce.py  geometry.py  protocol.py
docs/superpowers/plans/: 2026-06-30-foundation.md  2026-07-01-alert-system.md  2026-07-01-web-ui.md  2026-07-03-deterrent-usage-stats.md
docs/superpowers/reports/: 2026-06-30-foundation-verify.md  2026-07-01-alert-system-verify.md  2026-07-02-web-ui-verify.md  2026-07-11-deterrent-usage-stats-verify.md
docs/superpowers/specs/: 2026-07-01-alert-system-design.md  (+2 more)
fixtures/: client.toml  server.toml
scripts/: ci-check.sh
tests/: conftest.py  test_integration.py
tests/client/: test_annotation.py  test_capture.py  test_deterrent_stats.py  test_main.py  test_transport.py
tests/config/: test_config.py  test_models.py
tests/server/: test_handler.py  test_main.py  test_model.py
tests/shared/: test_debounce.py  test_geometry.py  test_protocol.py
(+87 files in other folders)
