[project]
name = "counter-cruiser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "websockets>=12.0",
    "opencv-python>=4.10",
    "numpy>=1.26",
]

[project.optional-dependencies]
server = [
    "torch>=2.3",
    "ultralytics>=8.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
]
strict_markers = true
addopts = "--strict-markers --cov=counter_cruiser --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
]
